Fix imported/w3c/web-platform-tests/css/css-tables/auto-layout-calc-width-001.html https://bugs.webkit.org/show_bug.cgi?id=262918 <rdar://problem/116697508>

Reviewed by Antti Koivisto.

Calc width on col is treated as auto in auto tables.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/auto-layout-calc-width-001-expected.txt:
* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::recalcColumn):

Canonical link: https://commits.webkit.org/269139@main